--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             margin: 50px;
             background-color: #db3232;
             display: flex;
+            align-items: center;
+            justify-content: center;
         }
         #game-container {
             background: white;
