--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 let resultText = document.getElementById("result");
                 
                 if (guess === number) {
-                    resultText.innerHTML = "🎉 You won!";
+                    resultText.innerHTML = " You won!";
                     resultText.style.color = "green";
                 } else {
                     resultText.innerHTML = `❌ You lost! The correct number was ${number}`;
