--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p id="result"></p>
         </div>
         <script>
-            const number = Math.floor(Math.random() * 10) + 1; // Generate a random number between 1 and 10
+            const number = Math.floor(Math.random() * 10) + 1; 
             
             function checkGuess() {
                 let guess = parseInt(document.getElementById("guess").value);
