--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
      <div id="gamecontainer">
             <h2>Guess the Number(1-10)</h2>
-            <input type="number" id="guess" min="1" max="10" placeholder="">
+            <input type="number" id="guess" min="1" max="10" placeholder="enter">
             <button onclick="checkGuess()">Submit</button>
             <p id="result"></p>
         </div>
