--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess the Number</title>
@@ -21,11 +22,13 @@
             box-shadow: 0px 0px 10px rgba(2, 0, 0, 0.1);
             display: inline-block;
         }
+
         input, button {
             padding: 10px;
             margin: 10px;
             font-size: 16px;
         }
+
         #result {
             font-size: 18px;
             font-weight: bold;
@@ -34,7 +37,7 @@
     </style>
 </head>
 <body>
-     <div id="gamecontainer">
+     <div id="game-container">
             <h2>Guess the Number(1-10)</h2>
             <input type="number" id="guess" min="1" max="10" placeholder="enter number">
             <button onclick="checkGuess()">Submit</button>
