--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #2c3e50;
-            color: black;
+            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
