--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             background-color: #2c3e50;
             color: white;
+            display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
